topbar overflow fixed and new project added

--- a/src/components/topbar/Topbar.scss
+++ b/src/components/topbar/Topbar.scss
@@ -9,12 +9,14 @@
     top: 0;
     z-index: 3;
     transition: all 1s ease;
+    overflow: hidden;
 
     .wrapper {
         padding: 20px 30px;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        
         
 
 
